crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_doubles_over_docstring_singles_mixed_quotes_module_singleline_var_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q002 Single quote docstring found but double quotes preferred
 --> docstring_singles_mixed_quotes_module_singleline_var_1.py:1:1
  |
1 | ''"Start with empty string" ' and lint docstring safely'
  | ^^
2 |
3 | def foo():
help: Replace single quotes docstring with double quotes

Q002 [*] Single quote docstring found but double quotes preferred
 --> docstring_singles_mixed_quotes_module_singleline_var_1.py:1:29
  |
1 | ''"Start with empty string" ' and lint docstring safely'
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2 |
3 | def foo():
help: Replace single quotes docstring with double quotes
  |
  - ''"Start with empty string" ' and lint docstring safely'
1 + ''"Start with empty string" " and lint docstring safely"
2 |

Q001 [*] Double quote multiline found but single quotes preferred
 --> docstring_singles_mixed_quotes_module_singleline_var_1.py:5:1
3 | def foo():
4 |     pass
5 | """ this is not a docstring """
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace double multiline quotes with single quotes
  |
4 |     pass
  - """ this is not a docstring """
5 + ''' this is not a docstring '''
  |
