crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_doubles_over_docstring_singles_module_singleline.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q002 [*] Single quote docstring found but double quotes preferred
 --> docstring_singles_module_singleline.py:1:1
  |
1 | ''' Double quotes singleline module docstring '''
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2 | ''' this is not a docstring '''
help: Replace single quotes docstring with double quotes
  |
  - ''' Double quotes singleline module docstring '''
1 + """ Double quotes singleline module docstring """
2 | ''' this is not a docstring '''
  |
