crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_doubles_mixed_quotes_module_singleline_var_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q002 Double quote docstring found but single quotes preferred
 --> docstring_doubles_mixed_quotes_module_singleline_var_1.py:1:1
  |
1 | ""'Start with empty string' ' and lint docstring safely'
  | ^^
2 |
3 | def foo():
help: Replace double quotes docstring with single quotes
